@@ -249,7 +249,6 @@ class ProjectViewsTest(CommonTest):
 
         response = self.client.get(project.get_detail_url())
         self.assertEqual(response.status_code, 200)
-        print response.content
         self.assertContains(response, intervention.name)
 
         intervention.delete()
